@@ -2,6 +2,6 @@
 # This file is auto-generated by build scripts
 module WWW
   class Mechanize
-    Version = '0.5.1'
+    Version = '0.5.2'
   end
 end
