@@ -1,0 +1,14 @@
+<html>
+  <head>
+    <title>HTML for tc_set_fields</title>
+  </head>
+  <body>
+    <form name="set_fields" method="post" action="/form_post">
+      <input type="text" name="first_name" /><br />
+      <input type="text" name="first_name" /><br />
+      <input type="text" name="gender" /><br />
+      <input type="text" name="green[eggs]" /><br />
+      <input type="submit" value="Submit" /><br />
+    </form>
+  </body>
+</html>
